# nlp-rake

./: LICENSE  README.md  rake_exercises.ipynb  setup.cfg
src/nlp_rake/: __init__.py  rake.py
tests/: cases_for_test.py  data_for_tests.py  test_rake.py
