[metadata]
name = nlp-rake-eeeeeeeelias
version = 0.0.4
author = Ilya Pogodaev
author_email = eliasnwr@gmail.com
description = A Python package implementing RAKE algorithm for keyword extraction
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eeeeeeeelias/nlp-rake
project_urls =
    Bug Tracker = https://github.com/eeeeeeeelias/nlp-rake/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
[options.packages.find]
where = src